--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
+# arquivos do sublime
+*.sublime-*
 
 node_modules/
 platforms/
